--- a/src/styles/lib/functions.scss
+++ b/src/styles/lib/functions.scss
@@ -9,5 +9,5 @@
 }
 
 @function opacity($color, $opacity) {
-  @return color-mix(in srgb, $color $opacity, transparent);
+  @return color-mix(in oklab, $color $opacity, transparent);
 }
