--- a/src/components/Button/styles/OutlinedButton.module.scss
+++ b/src/components/Button/styles/OutlinedButton.module.scss
@@ -5,15 +5,15 @@
     box-shadow 0.08s ease-in;
 
   background-color: transparent;
-  color: var(--color-accent-10);
-  border: 1px solid var(--color-accent-7);
+  color: var(--color-accent-9);
+  border: 1px solid var(--color-accent-a8);
 
   &:hover {
-    border-color: var(--color-accent-10);
+    border-color: var(--color-accent-a9);
   }
 
   &:active {
-    border-color: var(--color-accent-8);
+    border-color: var(--color-accent-a8);
     box-shadow: boxShadowAlpha(var(--color-accent-8));
   }
 
