--- a/src/components/TextField/TextField.module.scss
+++ b/src/components/TextField/TextField.module.scss
@@ -1,5 +1,19 @@
 .wrapper {
   margin-bottom: 0.5rem;
+
+  &.large {
+    .label {
+      font-size: var(--font-size-4);
+      margin-bottom: 0.25rem;
+    }
+  }
+
+  &.small {
+    .label {
+      font-size: var(--font-size-2);
+      margin-bottom: 0.25rem;
+    }
+  }
 }
 .group {
   display: flex;
@@ -16,17 +30,21 @@
   &.large {
     .input {
       height: 50px;
+      padding: 0 1rem;
     }
   }
 
   &.small {
     .input {
       height: 30px;
+      padding: 0 0.5rem;
     }
   }
 }
 .label {
+  font-size: var(--font-size-3);
   margin-bottom: 0.25rem;
+  padding-left: 0.25rem;
 }
 .input {
   width: 100%;
@@ -43,7 +61,8 @@
   margin-bottom: 20px;
 
   &.hasPrependIcon {
-    padding-left: 3.5rem;
+    padding-left: 2.5rem !important;
+    padding-right: 2.5rem !important;
   }
 
   &::placeholder {
@@ -82,6 +101,7 @@
   fill: var(--color-accent-9);
   width: 1rem;
   height: 1rem;
+  margin-bottom: 20px;
 }
 
 .iconAppend {
@@ -90,6 +110,7 @@
   fill: var(--color-accent-9);
   width: 1rem;
   height: 1rem;
+  margin-bottom: 20px;
 }
 
 .error {
