--- a/src/components/Button/styles/OutlinedButton.module.scss
+++ b/src/components/Button/styles/OutlinedButton.module.scss
@@ -5,16 +5,16 @@
     box-shadow 0.08s ease-in;
 
   background-color: transparent;
-  color: var(--color-accent-9);
-  border: 1px solid var(--color-accent-a8);
+  color: var(--color-accent-11);
+  border: 1px solid var(--color-accent-a10);
 
   &:hover {
-    border-color: var(--color-accent-a9);
+    border-color: var(--color-accent-a11);
   }
 
   &:active {
-    border-color: var(--color-accent-a8);
-    box-shadow: boxShadowAlpha(var(--color-accent-8));
+    border-color: var(--color-accent-a9);
+    box-shadow: boxShadowAlpha(var(--color-accent-11));
   }
 
   &:focus {
@@ -26,5 +26,36 @@
 
   > .icon-append {
     color: var(--color-accent-11);
+  }
+
+  &.button--high-contrast {
+    background-color: transparent;
+    transition:
+      all 0.2s,
+      box-shadow 0.08s ease-in;
+
+    background-color: transparent;
+    color: var(--color-accent-12);
+    border: 1px solid var(--color-accent-a9);
+
+    &:hover {
+      border-color: var(--color-accent-a10);
+    }
+
+    &:active {
+      border-color: var(--color-accent-a8);
+      box-shadow: boxShadowAlpha(var(--color-accent-12));
+    }
+
+    &:focus {
+    }
+
+    > .icon-prepend {
+      color: var(--color-accent-12);
+    }
+
+    > .icon-append {
+      color: var(--color-accent-12);
+    }
   }
 }
