--- a/src/styles/lib/colors.scss
+++ b/src/styles/lib/colors.scss
@@ -182,5 +182,5 @@ $colors: tomato, red, ruby, crimson, pink, plum, purple, violet, iris, indigo, b
 }
 
 .woozdesign {
-  --color-panel: var(--color-panel-translucent);
+  --color-panel: var(--color-panel-solid);
 }
