--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -31,7 +31,9 @@
     align-items: center;
     padding: 1rem;
 
-    border-bottom: 1px solid var(--color-gray-a6);
+    &--outlined {
+      border-bottom: 1px solid var(--color-gray-a6);
+    }
 
     .heading-title {
       font-weight: bold;
@@ -58,7 +60,9 @@
     flex-direction: row;
     gap: 1rem;
     padding: 1rem;
-    border-top: 1px solid var(--color-gray-a6);
+    &--outlined {
+      border-top: 1px solid var(--color-gray-a6);
+    }
   }
 
   &--outlined {
