--- a/src/styles/lib/typography.scss
+++ b/src/styles/lib/typography.scss
@@ -57,7 +57,7 @@ $font-size-lg-8: 3.5rem;
 }
 
 // Large Devices
-@include --lg {
+@include --lgAndUp {
   .woozdesign {
     --font-size-1: #{$font-size-lg-1};
     --font-size-2: #{$font-size-lg-2};
@@ -97,7 +97,7 @@ $font-size-lg-8: 3.5rem;
 }
 
 // Large Devices
-@include --lg {
+@include --lgAndUp {
   .woozdesign-dark {
     --font-size-1: #{$font-size-lg-1};
     --font-size-2: #{$font-size-lg-2};
@@ -137,7 +137,7 @@ $font-size-lg-8: 3.5rem;
 }
 
 // Large Devices
-@include --lg {
+@include --lgAndUp {
   .woozdesign-light {
     --font-size-1: #{$font-size-lg-1};
     --font-size-2: #{$font-size-lg-2};
