--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -20,6 +20,10 @@
     // font-size: var(--font-size-3); // Adjust as necessary
     padding: 1.5rem; // Adjust as necessary
   }
+  &--xlarge {
+    // font-size: var(--font-size-3); // Adjust as necessary
+    padding: 2rem; // Adjust as necessary
+  }
   img {
     width: 100%;
     object-fit: cover;
