--- a/src/styles/lib/fonts.scss
+++ b/src/styles/lib/fonts.scss
@@ -1,4 +1,6 @@
-@font-face {
-  font-family: Inter;
-  src: url('https://fonts.googleapis.com/css?family=Inter');
-}
+@import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
+
+// @font-face {
+// font-family: Inter;
+// src: url('https://fonts.googleapis.com/css?family=Inter');
+// }
