--- a/src/styles/lib/fonts.scss
+++ b/src/styles/lib/fonts.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
 
 // @font-face {
 // font-family: Inter;
