--- a/src/components/Tooltip/Tooltip.module.scss
+++ b/src/components/Tooltip/Tooltip.module.scss
@@ -10,7 +10,7 @@
   border: 1px solid var(--color-gray-a4);
   text-align: center;
   padding: 8px;
-  border-radius: 8px;
+  border-radius: var(--radius-4);
   position: absolute;
   z-index: 999;
   line-height: 1;
