--- a/ssr-test/src/app/page.module.css
+++ b/ssr-test/src/app/page.module.css
@@ -85,7 +85,7 @@
 
 .center::before {
   background: var(--secondary-glow);
-  border-radius: 50%;
+  border-radius: var(--radius-full);
   width: 480px;
   height: 360px;
   margin-left: -400px;
@@ -178,7 +178,7 @@
     align-items: center;
     inset: 0 0 auto;
     padding: 2rem 1rem 1.4rem;
-    border-radius: 0;
+    border-radius: var(--radius-0);
     border: none;
     border-bottom: 1px solid rgba(var(--callout-border-rgb), 0.25);
     background: linear-gradient(to bottom, rgba(var(--background-start-rgb), 1), rgba(var(--callout-rgb), 0.5));
