--- a/src/components/TextField/TextField.module.scss
+++ b/src/components/TextField/TextField.module.scss
@@ -1,17 +1,16 @@
 .wrapper {
-  margin-bottom: 0.5rem;
-
+  margin-bottom: var(--space-2);
   &.large {
     .label {
       font-size: var(--font-size-4);
-      margin-bottom: 0.25rem;
+      margin-bottom: var(--space-1);
     }
   }
 
   &.small {
     .label {
       font-size: var(--font-size-2);
-      margin-bottom: 0.25rem;
+      margin-bottom: var(--space-1);
     }
   }
 }
@@ -21,7 +20,7 @@
   position: relative;
   max-width: 190px;
   border: 2px solid transparent;
-  border-radius: 8px;
+  border-radius: var(--radius-4);
   &.block {
     width: 100%;
     max-width: 100%;
@@ -29,30 +28,30 @@
 
   &.large {
     .input {
-      height: 50px;
-      padding: 0 1rem;
+      height: 48px;
+      padding: var(--space-0) var(--space-4);
     }
   }
 
   &.small {
     .input {
-      height: 30px;
-      padding: 0 0.5rem;
+      height: 28px;
+      padding: var(--space-0) var(--space-2);
     }
   }
 }
 .label {
   font-size: var(--font-size-3);
-  margin-bottom: 0.25rem;
-  padding-left: 0.25rem;
+  margin-bottom: var(--space-1);
+  padding-left: var(--space-1);
 }
 .input {
   width: 100%;
-  height: 40px;
+  height: 32px;
   line-height: 28px;
-  padding: 0 1rem;
+  padding: var(--space-0) var(--space-2);
   border: 2px solid transparent;
-  border-radius: 8px;
+  border-radius: var(--radius-4);
   outline: none;
   background-color: transparent;
   border-color: var(--color-gray-6);
@@ -108,7 +107,7 @@
 
 .iconPrepend {
   position: absolute;
-  left: 1rem;
+  left: var(--space-4);
   fill: var(--color-accent-9);
   width: 1rem;
   height: 1rem;
@@ -117,7 +116,7 @@
 
 .iconAppend {
   position: absolute;
-  right: 1rem;
+  right: var(--space-4);
   fill: var(--color-accent-9);
   width: 1rem;
   height: 1rem;
