--- a/src/components/Button/styles/TextButton.module.scss
+++ b/src/components/Button/styles/TextButton.module.scss
@@ -22,4 +22,30 @@
   > .icon-append {
     fill: var(--color-accent-9);
   }
+
+  &.button--high-contrast {
+    color: var(--color-accent-12);
+    background-color: transparent;
+    // background-color: rgba(var(--color-accent-90), 0.2);
+
+    &:hover {
+      background-color: var(--color-accent-4);
+    }
+
+    &:active {
+      // background-color: rgba(var(--color-accent-80), 0.2);
+      box-shadow: boxShadowAlpha(var(--color-accent-12));
+    }
+
+    &:focus {
+      // box-shadow: boxShadow(var(--color-accent-90));
+    }
+    > .icon-prepend {
+      fill: var(--color-accent-12);
+    }
+
+    > .icon-append {
+      fill: var(--color-accent-12);
+    }
+  }
 }
