--- a/src/components/TextField/TextField.module.scss
+++ b/src/components/TextField/TextField.module.scss
@@ -109,8 +109,9 @@
   position: absolute;
   left: var(--space-4);
   fill: var(--color-accent-9);
-  width: 1rem;
-  height: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   margin-bottom: 20px;
 }
 
@@ -118,8 +119,9 @@
   position: absolute;
   right: var(--space-4);
   fill: var(--color-accent-9);
-  width: 1rem;
-  height: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   margin-bottom: 20px;
 }
 
