--- a/src/styles/core.scss
+++ b/src/styles/core.scss
@@ -1,5 +1,6 @@
 @import 'lib/reset.scss';
 @import 'lib/fonts.scss';
+@import '~@woozdesign/icons/dist/styles.css';
 @import 'lib/breakpoints.scss';
 @import 'lib/typography.scss';
 @import 'lib/colors.scss';
