--- a/src/components/Image/Image.module.scss
+++ b/src/components/Image/Image.module.scss
@@ -5,8 +5,8 @@
   overflow: hidden;
 
   img {
-    width: 100%;
     visibility: hidden;
+    width: 100%;
     height: 100%;
     transition: opacity 0.3s;
   }
@@ -27,6 +27,7 @@
     opacity: 1;
 
     &.hidden {
+      visibility: hidden;
       opacity: 0;
     }
   }
