--- a/src/components/Anchor/Anchor.module.scss
+++ b/src/components/Anchor/Anchor.module.scss
@@ -1,6 +1,6 @@
 .anchor {
   padding: 0 10px;
-  width: 200px;
+  width: 100%;
   font-size: var(--font-size-4);
   border-left: 3px solid var(--color-accent-a4);
 
