--- a/src/components/Image/Image.module.scss
+++ b/src/components/Image/Image.module.scss
@@ -3,11 +3,13 @@
 .imageContainer {
   position: relative;
   overflow: hidden;
+  border-radius: max(var(--radius-3), var(--radius-full));
 
   img {
-    visibility: hidden;
     width: 100%;
     height: 100%;
+  }
+  .noPlaceholder {
     transition: opacity 0.3s;
   }
 
@@ -24,10 +26,14 @@
     position: absolute;
     top: 0;
     left: 0;
-    opacity: 1;
+    opacity: 0;
+    transition: opacity 0.3s;
+
+    &.loaded {
+      opacity: 1;
+    }
 
     &.hidden {
-      visibility: hidden;
       opacity: 0;
     }
   }
