--- a/src/components/Layout/Layout.module.scss
+++ b/src/components/Layout/Layout.module.scss
@@ -14,6 +14,7 @@
 }
 
 .col {
+  box-sizing: border-box; // Add this line
   min-width: 0;
   padding-left: calc(var(--horizontal-gutter) / 2);
   padding-right: calc(var(--horizontal-gutter) / 2);
